--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-VITE_APP_API_BASE_URL=http://localhost:5055/api
-VITE_APP_STORE_DOMAIN=http://localhost:3000
-VITE_APP_API_SOCKET_URL=http://localhost:5055
+VITE_APP_API_BASE_URL=https://airexpert-api.onrender.com/api
+VITE_APP_STORE_DOMAIN=https://store-nine-zeta.vercel.app
+VITE_APP_API_SOCKET_URL=https://airexpert-api.onrender.com
 
 
 VITE_APP_CLOUD_NAME=your_cloudinary_cloud_name
